[gd_scene load_steps=3 format=2]

[ext_resource path="res://Day.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Week.gd" type="Script" id=2]

[node name="Week" type="HBoxContainer"]
margin_right = 560.0
margin_bottom = 80.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Day0" parent="." instance=ExtResource( 1 )]
margin_right = 76.0
dayNum = 0
dayRelative = 0

[node name="Day1" parent="." instance=ExtResource( 1 )]
margin_left = 80.0
margin_right = 157.0
dayNum = 0
dayRelative = 0

[node name="Day2" parent="." instance=ExtResource( 1 )]
margin_left = 161.0
margin_right = 237.0
dayNum = 0
dayRelative = 0

[node name="Day3" parent="." instance=ExtResource( 1 )]
margin_left = 241.0
margin_right = 318.0
dayNum = 0
dayRelative = 0

[node name="Day4" parent="." instance=ExtResource( 1 )]
margin_left = 322.0
margin_right = 398.0
dayNum = 0
dayRelative = 0

[node name="Day5" parent="." instance=ExtResource( 1 )]
margin_left = 402.0
margin_right = 479.0
dayNum = 0
dayRelative = 0

[node name="Day6" parent="." instance=ExtResource( 1 )]
margin_left = 483.0
margin_right = 560.0
dayNum = 0
dayRelative = 0
